--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.6.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
-        "yish/imgur": "^1.0"
+        "yish/imgur": "^1.0",
+        "howtomakeaturn/allpay-4-laravel": "0.1.0",
     },
     "require-dev": {
         "filp/whoops": "^2.0",
