--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
         "yish/imgur": "^1.0",
-        "howtomakeaturn/allpay-4-laravel": "0.1.0",
+        "howtomakeaturn/allpay-4-laravel": "0.1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
