--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-dompdf": "^0.8.3",
         "facebook/graph-sdk": "^5.6",
         "fideloper/proxy": "^4.0",
         "flamelin/ecpay": "dev-master",
@@ -13,7 +14,8 @@
         "laravel/framework": "5.6.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
-        "yish/imgur": "^1.0"
+        "yish/imgur": "^1.0",
+        "dompdf/dompdf": "^0.8"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
