--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,18 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.3",
+        "barryvdh/laravel-snappy": "^0.4.3",
+        "dompdf/dompdf": "^0.8",
         "facebook/graph-sdk": "^5.6",
         "fideloper/proxy": "^4.0",
         "flamelin/ecpay": "dev-master",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "inwave/laravel-uploadcare": "^1.6",
         "laravel/framework": "5.6.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
-        "yish/imgur": "^1.0",
-        "dompdf/dompdf": "^0.8"
-
+        "yish/imgur": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
